# monstertruck

./: .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  AYAM_PORT_PLAN.md  Cargo.toml  FILLET_IMPLEMENTATION_PLAN.md  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
.tendrion/: .gitignore  AUTO_MODE_DECISIONS.md  DEVIATIONS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.yaml  execution-log.jsonl
.tendrion/milestones/: v0.2.0-REQUIREMENTS.md  v0.2.0-ROADMAP.md  v0.3.0-REQUIREMENTS.md  v0.3.0-ROADMAP.md  v0.4.0-REQUIREMENTS.md  v0.4.0-ROADMAP.md  v0.5.0-REQUIREMENTS.md  (+7 more)
docs/: MIGRATION.md
monstertruck-core/: Cargo.toml
monstertruck-derive/: Cargo.toml  README.md
monstertruck-geometry/: Cargo.toml
monstertruck-geometry/fuzz/: Cargo.toml
monstertruck-geometry/fuzz/fuzz_targets/: knot_vector.rs  nurbs_eval.rs
monstertruck-gpu/: Cargo.toml
monstertruck-math/: Cargo.toml
monstertruck-math/src/: conversions.rs  lib.rs  polynomial.rs  traits.rs  types.rs
monstertruck-math/tests/: compatibility.rs
monstertruck-meshing/: Cargo.toml
monstertruck-modeling/: Cargo.toml
monstertruck-solid/: Cargo.toml
monstertruck-solid/benches/: boolean_ops.rs
monstertruck-solid/src/: alternative.rs  lib.rs
monstertruck-solid/src/draft/: draft_op.rs  mod.rs  tests.rs
monstertruck-solid/src/fillet/: convert.rs  edge_select.rs  error.rs  geometry.rs  integrate.rs  mod.rs  ops.rs  params.rs  tests.rs  topology.rs  validate.rs
monstertruck-solid/src/healing/: edge_curve_consistency.rs  mod.rs  split_closed_edges.rs  split_closed_faces.rs  surface_healing.rs  tests.rs
monstertruck-solid/src/shell_ops/: mod.rs  offset_op.rs  shell_op.rs  tests.rs
monstertruck-solid/src/transversal/: edge_cases.rs  mod.rs
monstertruck-solid/src/transversal/divide_face/: mod.rs
monstertruck-solid/src/transversal/faces_classification/: mod.rs  tests.rs
monstertruck-solid/src/transversal/integrate/: mod.rs  tests.rs
monstertruck-solid/src/transversal/intersection_curve/: mod.rs  tests.rs
monstertruck-solid/src/transversal/loops_store/: mod.rs  tests.rs
monstertruck-solid/src/transversal/polyline_construction/: mod.rs
monstertruck-solid/tests/: boolean_edge_cases.rs  boolean_ops_coverage.rs  feature_integration.rs  fillet_coverage.rs  fixture_helpers.rs  healing_coverage.rs  healing_fixtures.rs  unwrap_safety.rs
monstertruck-step/fuzz/: Cargo.toml
monstertruck-step/fuzz/fuzz_targets/: step_parse.rs
monstertruck-topology/: Cargo.toml
scripts/: get_coverage.sh
(+703 files in other folders)
