[package]
name = "monstertruck-math"
version = "0.1.0"
edition = "2024"
description = "Math adapter crate providing cgmath-compatible API over nalgebra"

[dependencies]
nalgebra = { workspace = true }
num-traits = "0.2"
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
approx = "0.5"

[dev-dependencies]
serde_json = "1"
