[package]
name = "monstertruck-solid"
version = "0.1.1"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
description = "Boolean operations, fillets, and shape healing for solids"
homepage = "https://github.com/virtualritz/truck"
repository = "https://github.com/virtualritz/truck"
license = "Apache-2.0"

[features]
default = ["step-test"]
step-test = []

[dependencies]
derive_more = { workspace = true }
itertools = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
monstertruck-core = { workspace = true }
monstertruck-geometry = { workspace = true }
monstertruck-traits = { workspace = true }
monstertruck-meshing = { workspace = true }
monstertruck-topology = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
monstertruck-modeling = { workspace = true, features = ["fillet"] }
monstertruck-step = { workspace = true }

[[bench]]
name = "boolean_ops"
harness = false

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { workspace = true }
