[package]
name = "monstertruck-step-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ruststep]
version = "0.4"

[[bin]]
name = "step_parse"
path = "fuzz_targets/step_parse.rs"
doc = false

[workspace]
members = ["."]
